--- a/tem/i18n/zh_CN.po
+++ b/tem/i18n/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: bremskerl-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-02-10 11:36+0000\n"
-"PO-Revision-Date: 2012-02-28 15:53+0000\n"
+"PO-Revision-Date: 2012-03-02 08:41+0000\n"
 "Last-Translator: Marco Dieckhoff <Unknown>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
-"X-Generator: Launchpad (build 14874)\n"
+"X-Launchpad-Export-Date: 2012-03-03 05:50+0000\n"
+"X-Generator: Launchpad (build 14886)\n"
 
 #. module: tem
 #: model:ir.model,name:tem.model_tem_equipment
@@ -119,7 +119,7 @@ msgstr ""
 #: field:tem.equipment.group,notes:0
 #: field:tem.inspection,notes:0
 msgid "Notes"
-msgstr "注解"
+msgstr "备注"
 
 #. module: tem
 #: field:tem.equipment.group,interval_repeat:0
@@ -150,7 +150,7 @@ msgstr ""
 #. module: tem
 #: selection:tem.equipment.group,interval_repeat:0
 msgid "Quarter"
-msgstr "三个月"
+msgstr "季度"
 
 #. module: tem
 #: selection:tem.equipment.group,interval_repeat:0
