--- a/sale_quotation_validity_date/i18n/de.po
+++ b/sale_quotation_validity_date/i18n/de.po
@@ -7,13 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.3\n"
 "Report-Msgid-Bugs-To: dieckhoff@bremskerl.de\n"
 "POT-Creation-Date: 2012-03-08 14:31+0000\n"
-"PO-Revision-Date: 2012-03-08 14:31+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2012-03-08 17:31+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-03-09 05:26+0000\n"
+"X-Generator: Launchpad (build 14914)\n"
 
 #. module: sale_quotation_validity_date
 #: help:sale.order,quotation_validity:0
@@ -24,4 +25,3 @@ msgstr "Datum, bis zu dem ein Angebot als verbindlich angesehen wird."
 #: field:sale.order,quotation_validity:0
 msgid "Quotation validity"
 msgstr "Angebot gültig bis"
-
