--- a/boilerplates/i18n/de.po
+++ b/boilerplates/i18n/de.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2012-08-06 06:57+0000\n"
-"PO-Revision-Date: 2011-08-16 15:09+0000\n"
-"Last-Translator: Bremskerl <Unknown>\n"
+"PO-Revision-Date: 2012-08-08 11:35+0000\n"
+"Last-Translator: Marco Dieckhoff <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-07 06:19+0000\n"
-"X-Generator: Launchpad (build 15745)\n"
+"X-Launchpad-Export-Date: 2012-08-09 05:23+0000\n"
+"X-Generator: Launchpad (build 15761)\n"
 
 #. module: boilerplates
 #: view:boilerplates.text:0
@@ -52,6 +52,7 @@ msgstr "Entspricht nicht der Partnerfestlegung des Textbausteins "
 #: view:boilerplate.wizard:0
 msgid "If unsure, please cancel and use the Save button first."
 msgstr ""
+"Wenn Sie unsicher sind, bitte abbrechen und den Speichern-Button benutzen."
 
 #. module: boilerplates
 #: field:boilerplates.text,active:0
@@ -99,7 +100,7 @@ msgstr "Textbaustein"
 #. module: boilerplates
 #: view:boilerplate.wizard:0
 msgid "Unsaved changes to the form will be overwritten."
-msgstr ""
+msgstr "Nicht gespeicherte Änderungen werden überschrieben!"
 
 #. module: boilerplates
 #: view:boilerplates.text:0
@@ -134,7 +135,7 @@ msgstr "Zoll"
 #. module: boilerplates
 #: view:boilerplate.wizard:0
 msgid "WARNING!"
-msgstr ""
+msgstr "WARNUNG!"
 
 #. module: boilerplates
 #: model:ir.actions.act_window,name:boilerplates.open_boilerplate_text_tree
@@ -180,7 +181,7 @@ msgstr "Name"
 #. module: boilerplates
 #: field:boilerplate.wizard,lang:0
 msgid "Language"
-msgstr ""
+msgstr "Sprache"
 
 #. module: boilerplates
 #: model:boilerplates.category,name:boilerplates.bp_cat_accounting
