--- a/stock_picking_group/i18n/de.po
+++ b/stock_picking_group/i18n/de.po
@@ -6,120 +6,146 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.3\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
-"POT-Creation-Date: 2012-04-20 10:36+0000\n"
-"PO-Revision-Date: 2012-04-20 10:36+0000\n"
-"Last-Translator: <>\n"
+"POT-Creation-Date: 2012-04-27 07:21+0000\n"
+"PO-Revision-Date: 2012-10-22 10:46+0000\n"
+"Last-Translator: Marco Dieckhoff <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-10-23 05:13+0000\n"
+"X-Generator: Launchpad (build 16179)\n"
 
-#: model:ir.actions.act_window,name:stock_picking_group.open_picking_group_tree
-#: model:ir.ui.menu,name:stock_picking_group.menu_picking_groups
 #. module: stock_picking_group
-msgid "Picking Groups"
-msgstr "Lieferauftrags-Gruppierung"
-
 #: view:stock.picking.group:0
-#. module: stock_picking_group
-msgid "Incoming"
-msgstr "Eingehend"
-
-#: code:addons\stock_picking_group\stock.py:29
-#. module: stock_picking_group
-#, python-format
-msgid "You cannot re-group %s. Remove existing grouping first."
-msgstr "%s kann nicht neu gruppiert werden. Bitte erst die alte Gruppierung aufheben."
-
-#: view:stock.picking.group:0
-#. module: stock_picking_group
 msgid "Combined Moves"
 msgstr "Gruppierte Lagerbewegungen"
 
-#: code:addons\stock_picking_group\stock.py:49
-#: code:addons\stock_picking_group\stock.py:51
 #. module: stock_picking_group
-#, python-format
-msgid "%s has a target address, %s has not."
-msgstr "%s hat eine Zieladresse, %s nicht."
-
-#: view:stock.picking.group:0
-#. module: stock_picking_group
-msgid "Pickings"
-msgstr "Lieferaufträge"
-
-#: constraint:stock.picking.group:0
-#. module: stock_picking_group
-msgid "The pickings you chose are not compatible (type or address varies, or from different companies)"
-msgstr "Die gewählten Lieferaufträge sind nicht kompatibel. (Typ oder Adresse weicht ab, oder die Aufträge gehören zu unterschiedlichen Firmen.)"
-
-#: view:stock.picking.group:0
-#. module: stock_picking_group
-msgid "Delivery"
-msgstr "Auslieferung"
-
-#: model:ir.actions.server,name:stock_picking_group.action_group_picking_server
-#. module: stock_picking_group
-msgid "Group Pickings"
-msgstr "Lieferaufträge gruppieren"
-
-#: code:addons\stock_picking_group\stock.py:41
-#. module: stock_picking_group
-#, python-format
-msgid "%s (%s) and %s (%s) have different types."
-msgstr "%s (%s) und %s (%s) haben unterschiedliche Typen."
-
-#: view:stock.picking.group:0
-#. module: stock_picking_group
-msgid "Internal"
-msgstr "Intern"
-
-#: code:addons\stock_picking_group\stock.py:29
-#: code:addons\stock_picking_group\stock.py:41
-#: code:addons\stock_picking_group\stock.py:49
-#: code:addons\stock_picking_group\stock.py:51
-#: code:addons\stock_picking_group\stock.py:53
 #: code:addons\stock_picking_group\stock.py:57
-#. module: stock_picking_group
-#, python-format
-msgid "Grouping failed."
-msgstr "Gruppieren fehlgeschlagen."
-
-#: help:stock.picking.group,date:0
-#. module: stock_picking_group
-msgid "Date when the grouping was created"
-msgstr "Datum an dem die Gruppierung angelegt wurde."
-
-#: field:stock.picking.group,company_id:0
-#. module: stock_picking_group
-msgid "Address"
-msgstr "Adresse"
-
-#: field:stock.picking.group,date:0
-#. module: stock_picking_group
-msgid "Date"
-msgstr "Datum"
-
-#: view:stock.picking.group:0
-#. module: stock_picking_group
-msgid "Picking Group"
-msgstr "Lieferauftrags-Gruppierung"
-
-#: code:addons\stock_picking_group\stock.py:53
-#. module: stock_picking_group
-#, python-format
-msgid "%s and %s have different target addresses."
-msgstr "%s und %s haben unterschiedliche Zieladressen."
-
-#: model:ir.model,name:stock_picking_group.model_stock_picking
-#. module: stock_picking_group
-msgid "Picking List"
-msgstr "Lieferauftrags-Liste"
-
-#: code:addons\stock_picking_group\stock.py:57
-#. module: stock_picking_group
 #, python-format
 msgid "%s (%s) and %s (%s) belong to different companies."
 msgstr "%s (%s) und %s (%s) gehören zu unterschiedlichen Firmen."
 
+#. module: stock_picking_group
+#: view:stock.picking.group:0
+msgid "Pickings"
+msgstr "Lieferaufträge"
+
+#. module: stock_picking_group
+#: code:addons\stock_picking_group\stock.py:29
+#, python-format
+msgid "You cannot re-group %s. Remove existing grouping first."
+msgstr ""
+"%s kann nicht neu gruppiert werden. Bitte erst die alte Gruppierung aufheben."
+
+#. module: stock_picking_group
+#: model:ir.actions.server,name:stock_picking_group.action_group_picking_server
+msgid "Group Pickings"
+msgstr "Lieferaufträge gruppieren"
+
+#. module: stock_picking_group
+#: code:addons\stock_picking_group\stock.py:41
+#, python-format
+msgid "%s (%s) and %s (%s) have different types."
+msgstr "%s (%s) und %s (%s) haben unterschiedliche Typen."
+
+#. module: stock_picking_group
+#: view:stock.picking.group:0
+msgid "Internal"
+msgstr "Intern"
+
+#. module: stock_picking_group
+#: code:addons\stock_picking_group\stock.py:29
+#: code:addons\stock_picking_group\stock.py:41
+#: code:addons\stock_picking_group\stock.py:49
+#: code:addons\stock_picking_group\stock.py:51
+#: code:addons\stock_picking_group\stock.py:53
+#: code:addons\stock_picking_group\stock.py:57
+#, python-format
+msgid "Grouping failed."
+msgstr "Gruppieren fehlgeschlagen."
+
+#. module: stock_picking_group
+#: model:ir.model,name:stock_picking_group.model_stock_picking
+msgid "Picking List"
+msgstr "Lieferauftrags-Liste"
+
+#. module: stock_picking_group
+#: model:ir.actions.act_window,name:stock_picking_group.open_picking_group_tree
+#: model:ir.ui.menu,name:stock_picking_group.menu_picking_groups
+msgid "Picking Groups"
+msgstr "Lieferauftrags-Gruppierung"
+
+#. module: stock_picking_group
+#: constraint:stock.picking.group:0
+msgid ""
+"The pickings you chose are not compatible (type or address varies, or from "
+"different companies)"
+msgstr ""
+"Die gewählten Lieferaufträge sind nicht kompatibel. (Typ oder Adresse weicht "
+"ab, oder die Aufträge gehören zu unterschiedlichen Firmen.)"
+
+#. module: stock_picking_group
+#: view:stock.picking.group:0
+msgid "Delivery"
+msgstr "Auslieferung"
+
+#. module: stock_picking_group
+#: field:stock.picking.group,company_id:0
+msgid "Address"
+msgstr "Adresse"
+
+#. module: stock_picking_group
+#: field:stock.picking.group,date:0
+msgid "Date"
+msgstr "Datum"
+
+#. module: stock_picking_group
+#: view:stock.picking.group:0
+msgid "Incoming"
+msgstr "Eingehend"
+
+#. module: stock_picking_group
+#: view:stock.picking.group:0
+#: field:stock.picking.group,note:0
+msgid "Notes"
+msgstr ""
+
+#. module: stock_picking_group
+#: help:stock.picking.group,date:0
+msgid "Date when the grouping was created"
+msgstr "Datum an dem die Gruppierung angelegt wurde."
+
+#. module: stock_picking_group
+#: field:stock.picking.group,partner_id:0
+msgid "Partner"
+msgstr ""
+
+#. module: stock_picking_group
+#: code:addons\stock_picking_group\stock.py:53
+#, python-format
+msgid "%s and %s have different target addresses."
+msgstr "%s und %s haben unterschiedliche Zieladressen."
+
+#. module: stock_picking_group
+#: code:addons\stock_picking_group\stock.py:49
+#: code:addons\stock_picking_group\stock.py:51
+#, python-format
+msgid "%s has a target address, %s has not."
+msgstr "%s hat eine Zieladresse, %s nicht."
+
+#. module: stock_picking_group
+#: model:ir.model,name:stock_picking_group.model_stock_picking_group
+msgid "stock.picking.group"
+msgstr ""
+
+#. module: stock_picking_group
+#: view:stock.picking.group:0
+msgid "Picking Group"
+msgstr "Lieferauftrags-Gruppierung"
+
+#. module: stock_picking_group
+#: field:stock.picking.group,move_lines:0
+msgid "Moves"
+msgstr ""
