--- a/tem/i18n/de.po
+++ b/tem/i18n/de.po
@@ -287,7 +287,7 @@ msgstr "Lieferant"
 #: view:tem.inspection:0
 #: selection:tem.inspection,result:0
 msgid "Failed"
-msgstr "Durchgefallen"
+msgstr "Nicht bestanden"
 
 #. module: tem
 #: view:tem.equipment:0
