--- a/tem/i18n/de.po
+++ b/tem/i18n/de.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.3\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2012-03-26 08:55+0000\n"
-"PO-Revision-Date: 2012-03-26 11:33+0000\n"
-"Last-Translator: Bremskerl <Unknown>\n"
+"PO-Revision-Date: 2013-02-14 14:53+0000\n"
+"Last-Translator: Marco Dieckhoff <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-22 05:24+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2013-02-15 04:56+0000\n"
+"X-Generator: Launchpad (build 16491)\n"
 
 #. module: tem
 #: model:ir.model,name:tem.model_tem_equipment
@@ -287,7 +287,7 @@ msgstr "Lieferant"
 #: view:tem.inspection:0
 #: selection:tem.inspection,result:0
 msgid "Failed"
-msgstr "Durchgefallen"
+msgstr "Nicht bestanden"
 
 #. module: tem
 #: view:tem.equipment:0
