--- a/tem/i18n/de.po
+++ b/tem/i18n/de.po
@@ -6,31 +6,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.3\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
-"POT-Creation-Date: 2012-03-26 08:55+0000\n"
-"PO-Revision-Date: 2013-02-14 14:53+0000\n"
+"POT-Creation-Date: 2013-02-25 07:43+0000\n"
+"PO-Revision-Date: 2013-02-25 11:13+0000\n"
 "Last-Translator: Marco Dieckhoff <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-15 04:56+0000\n"
-"X-Generator: Launchpad (build 16491)\n"
+"X-Launchpad-Export-Date: 2013-02-26 05:20+0000\n"
+"X-Generator: Launchpad (build 16506)\n"
 
 #. module: tem
-#: model:ir.model,name:tem.model_tem_equipment
-msgid "tem.equipment"
-msgstr "tem.equipment"
-
-#. module: tem
-#: view:tem.equipment:0
-#: view:tem.inspection:0
-msgid "Please remember to add measurements on the second tab if the result is passed or failed."
-msgstr "Bitte denken Sie daran, Messungen auf dem zweiten Tab einzugeben, falls das Ergebnis Bestanden oder Nicht Bestanden ist."
-
-#. module: tem
-#: model:tem.res.units,description:tem.temunit15
-msgid "Millimeters"
-msgstr "Millimeter"
+#: field:tem.inspection,maint:0
+msgid "Needs Maintenance/Repair"
+msgstr "Benötigt Wartung/Reparatur"
 
 #. module: tem
 #: model:tem.res.units,description:tem.temunit20
@@ -38,15 +27,11 @@ msgid "Parts per Million"
 msgstr "Teile pro Million"
 
 #. module: tem
+#: view:tem.equipment:0
 #: view:tem.inspection:0
 #: field:tem.inspection,measurement_ids:0
 msgid "Measurements"
 msgstr "Messungen"
-
-#. module: tem
-#: model:ir.model,name:tem.model_tem_equipment_group
-msgid "tem.equipment.group"
-msgstr "tem.equipment.group"
 
 #. module: tem
 #: field:tem.inspection,scrap:0
@@ -54,6 +39,14 @@ msgid "To be scrapped"
 msgstr "Wird verschrottet"
 
 #. module: tem
+#: view:tem.equipment:0
+#: view:tem.inspection:0
+#: view:tem.inspection.measurements:0
+msgid "Set note if value is 0.00"
+msgstr "Bitte Hinweis angeben wenn der Wert 0.00 ist."
+
+#. module: tem
+#: model:ir.actions.act_window,name:tem.open_tem_listing_bylocation_location_tree
 #: model:ir.actions.act_window,name:tem.open_tem_location_tree
 msgid "TEM Locations"
 msgstr "PMM Orte"
@@ -73,6 +66,22 @@ msgstr "Wochen"
 #: view:tem.inspection:0
 msgid "Proof of Calibration"
 msgstr "Kalibrierschein"
+
+#. module: tem
+#: model:ir.actions.act_window,name:tem.open_tem_inspection_references_tree
+#: model:ir.ui.menu,name:tem.menu_definitions_references
+msgid "Reference Values"
+msgstr "Sollwerte"
+
+#. module: tem
+#: field:tem.equipment,inspection_soon:0
+msgid "Next Inspection soon"
+msgstr "Nächste Inspektion bald fällig"
+
+#. module: tem
+#: field:tem.location,printreports:0
+msgid "Show on printed reports"
+msgstr "Auf Ausdrucken anzeigen"
 
 #. module: tem
 #: model:tem.res.units,description:tem.temunit13
@@ -160,6 +169,11 @@ msgid "Usage Site"
 msgstr "Einsatzort"
 
 #. module: tem
+#: model:ir.model,name:tem.model_tem_listing_bylocation
+msgid "Listing by Location"
+msgstr "Liste nach Orten"
+
+#. module: tem
 #: model:tem.res.units,description:tem.temunit14
 msgid "Square Meters"
 msgstr "Quadratmeter"
@@ -217,6 +231,11 @@ msgid "For Employee type, you have to set a related user"
 msgstr "Bei Auswahl von Mitarbeiter muss ein Benutzer verknüpft werden."
 
 #. module: tem
+#: view:tem.inspection.references:0
+msgid "Equipment Group"
+msgstr "Prüfmittelgruppe"
+
+#. module: tem
 #: model:tem.res.units,description:tem.temunit11
 msgid "Kiloohm"
 msgstr "Kiloohm"
@@ -247,6 +266,11 @@ msgstr "Partner"
 #: view:tem.inspection:0
 msgid "Inspector"
 msgstr "Prüfer"
+
+#. module: tem
+#: field:tem.equipment.group,measuring_resolution_unit_id:0
+msgid "Resolution unit"
+msgstr "Einheit Auflösung"
 
 #. module: tem
 #: model:tem.res.units,description:tem.temunit24
@@ -302,7 +326,7 @@ msgid "State"
 msgstr "Status"
 
 #. module: tem
-#: view:tem.location:0
+#: field:tem.listing.bylocation.location,location_id:0
 msgid "Location"
 msgstr "Ort"
 
@@ -335,6 +359,7 @@ msgstr "Zentimeter"
 #. module: tem
 #: view:tem.equipment:0
 #: field:tem.equipment,group_id:0
+#: field:tem.inspection.references,group_id:0
 #: view:tem.res.responsibles:0
 #: field:tem.res.responsibles,type:0
 msgid "Type"
@@ -376,6 +401,21 @@ msgid "Hours"
 msgstr "Stunden"
 
 #. module: tem
+#: model:ir.module.module,description:tem.module_meta_information
+msgid "Test Equipment Management Suite"
+msgstr "Prüfmittelverwaltung"
+
+#. module: tem
+#: field:tem.inspection.references,boundary_lower:0
+msgid "Lower Boundary"
+msgstr "Unterer Grenzwert"
+
+#. module: tem
+#: field:tem.inspection,description:0
+msgid "Short Description"
+msgstr "Kurzbeschreibung"
+
+#. module: tem
 #: model:ir.ui.menu,name:tem.menu_definitions
 msgid "Configuration"
 msgstr "Konfiguration"
@@ -407,6 +447,11 @@ msgid "Next Inspection"
 msgstr "Nächste Prüfung"
 
 #. module: tem
+#: selection:tem.equipment,state:0
+msgid "Marked deleted"
+msgstr "als gelöscht markieren"
+
+#. module: tem
 #: sql_constraint:tem.equipment:0
 msgid "Ident no. has to be unique."
 msgstr "Die Ident-Nr. muss eindeutig sein."
@@ -429,9 +474,9 @@ msgid "Range"
 msgstr "Messbereich"
 
 #. module: tem
-#: constraint:tem.inspection:0
-msgid "You need to set at least one measurement."
-msgstr "Sie müssen mindestens ein Messergebnis eingeben."
+#: model:ir.model,name:tem.model_res_users
+msgid "res.users"
+msgstr "res.users"
 
 #. module: tem
 #: field:tem.inspection,next:0
@@ -439,11 +484,21 @@ msgid "Next Inspection Due"
 msgstr "Nächste Prüfung fällig"
 
 #. module: tem
+#: code:addons/tem/tem.py:486
+#: field:tem.inspection.measurements,property:0
+#: model:tem.inspection.measurements,property:0
+#: field:tem.inspection.references,property:0
+#, python-format
+msgid "Property"
+msgstr "Merkmal"
+
+#. module: tem
 #: view:tem.equipment:0
 #: view:tem.inspection:0
 #: field:tem.inspection,name:0
 #: view:tem.inspection.measurements:0
 #: field:tem.inspection.measurements,inspection_id:0
+#: field:tem.inspection.measurements,name:0
 msgid "Inspection"
 msgstr "Prüfung"
 
@@ -465,11 +520,24 @@ msgid "Order no."
 msgstr "Bestellnummer"
 
 #. module: tem
+#: constraint:tem.inspection:0
+msgid ""
+"\n"
+"\n"
+"You need to set at least one measurement on a passed or failed inspection.\n"
+msgstr ""
+"\n"
+"\n"
+"Sie müssen mindestens einen Messwert bei einer bestandenen oder nicht "
+"bestandenen Prüfung erfassen.\n"
+
+#. module: tem
 #: field:tem.equipment,name:0
 msgid "Equipment name"
 msgstr "Prüfmittel Name"
 
 #. module: tem
+#: view:tem.listing.bylocation.location:0
 #: view:tem.location:0
 msgid "TEM - Locations"
 msgstr "PMM - Orte"
@@ -490,6 +558,7 @@ msgstr "Allgemeine Prüfanordnung"
 #: view:tem.equipment.group:0
 #: view:tem.inspection:0
 #: view:tem.inspection.measurements:0
+#: view:tem.inspection.references:0
 #: view:tem.location:0
 #: view:tem.res.responsibles:0
 #: view:tem.res.units:0
@@ -497,9 +566,14 @@ msgid "Group by..."
 msgstr "Gruppieren nach..."
 
 #. module: tem
-#: model:ir.model,name:tem.model_tem_res_units
-msgid "tem.res.units"
-msgstr "tem.res.units"
+#: view:tem.equipment:0
+#: view:tem.inspection:0
+msgid ""
+"Please remember to add measurements on the second tab if the result is "
+"passed or failed."
+msgstr ""
+"Bitte denken Sie daran, bei bestanden oder nicht bestanden auch Messwerte "
+"auf dem zweiten Tab zu erfassen."
 
 #. module: tem
 #: view:tem.inspection:0
@@ -517,6 +591,13 @@ msgstr "Verantwortliche"
 #: view:tem.res.units:0
 msgid "Category"
 msgstr "Kategorie"
+
+#. module: tem
+#: view:tem.equipment:0
+#: view:tem.inspection:0
+#: view:tem.inspection.references:0
+msgid "TEM Reference Values"
+msgstr "PMM Sollwerte"
 
 #. module: tem
 #: view:tem.equipment.group:0
@@ -540,9 +621,11 @@ msgid "Note"
 msgstr "Hinweis"
 
 #. module: tem
-#: model:ir.model,name:tem.model_tem_res_responsibles
-msgid "tem.res.responsibles"
-msgstr "tem.res.responsibles"
+#: constraint:res.users:0
+msgid "The chosen company is not in the allowed companies for this user"
+msgstr ""
+"Das ausgewählte Unternehmen gehört nicht zu den zulässigen Unternehmen für "
+"diesen Benutzer"
 
 #. module: tem
 #: view:tem.equipment:0
@@ -569,9 +652,9 @@ msgid "TEM Units"
 msgstr "PMM Einheiten"
 
 #. module: tem
-#: view:tem.equipment.group:0
-msgid "Extended search..."
-msgstr "Erweiterte Suche..."
+#: field:tem.inspection.references,apply_to:0
+msgid "Apply To"
+msgstr "Anwenden bei"
 
 #. module: tem
 #: view:tem.equipment:0
@@ -579,7 +662,6 @@ msgid "TEM - Equipment"
 msgstr "PMM - Prüfmittel"
 
 #. module: tem
-#: view:tem.location:0
 #: field:tem.location,related_equipment_ids:0
 msgid "Related Equipment"
 msgstr "Verknüpfte Prüfmittel"
@@ -598,11 +680,6 @@ msgstr "Lagerort"
 #: field:tem.equipment,measuring_precision:0
 msgid "Precision"
 msgstr "Messgenauigkeit"
-
-#. module: tem
-#: model:ir.model,name:tem.model_tem_location
-msgid "tem.location"
-msgstr "tem.location"
 
 #. module: tem
 #: view:tem.inspection.measurements:0
@@ -640,19 +717,27 @@ msgid "Count"
 msgstr "Anzahl"
 
 #. module: tem
+#: field:tem.listing.bylocation,date_end:0
+#: field:tem.listing.bylocation.location,date_end:0
+msgid "Date end"
+msgstr "Enddatum"
+
+#. module: tem
 #: model:tem.res.units,description:tem.temunit00
 msgid "Percent"
 msgstr "Prozent"
 
 #. module: tem
-#: selection:tem.equipment.group,interval_repeat:0
-msgid "Months"
-msgstr "Monate"
+#: field:tem.equipment,interval_text:0
+#: field:tem.equipment.group,interval:0
+#: field:tem.equipment.group,interval_text:0
+msgid "Interval"
+msgstr "Intervall"
 
 #. module: tem
-#: model:ir.model,name:tem.model_tem_inspection_measurements
-msgid "tem.inspection.measurements"
-msgstr "tem.inspection.measurements"
+#: field:tem.listing.bylocation.location,due_equipment_ids:0
+msgid "Due Equipment"
+msgstr "Fällige Prüfmittel"
 
 #. module: tem
 #: selection:tem.equipment.group,interval_repeat:0
@@ -660,9 +745,9 @@ msgid "Production Orders"
 msgstr "Aufträge"
 
 #. module: tem
-#: field:tem.inspection,maint:0
-msgid "Needs Maintenance/Repair"
-msgstr "Benötigt Wartung/Reparatur"
+#: model:tem.res.units,description:tem.temunit15
+msgid "Millimeters"
+msgstr "Millimeter"
 
 #. module: tem
 #: field:tem.equipment,measuring_resolution:0
@@ -676,6 +761,16 @@ msgstr "Auflösung"
 #: view:tem.inspection:0
 msgid "Scrapped"
 msgstr "Verschrottet"
+
+#. module: tem
+#: field:tem.inspection.references,boundary_upper:0
+msgid "Upper Boundary"
+msgstr "Oberer Grenzwert"
+
+#. module: tem
+#: help:tem.inspection.references,property:0
+msgid "Short note on what to measure"
+msgstr "Kurzer Hinweis darauf, welche Eigenschaft zu messen ist"
 
 #. module: tem
 #: constraint:tem.inspection.measurements:0
@@ -704,11 +799,9 @@ msgid "Newton / Square Millimeter"
 msgstr "Newton pro Quadratmillimeter"
 
 #. module: tem
-#: field:tem.equipment,interval_text:0
-#: field:tem.equipment.group,interval:0
-#: field:tem.equipment.group,interval_text:0
-msgid "Interval"
-msgstr "Intervall"
+#: sql_constraint:res.users:0
+msgid "You can not have two users with the same login !"
+msgstr "Zwei Benuzter dürfen nicht den gleichen Benutzernamen verwenden."
 
 #. module: tem
 #: selection:tem.equipment.group,interval_repeat:0
@@ -718,6 +811,7 @@ msgstr "Verschoben"
 #. module: tem
 #: model:ir.ui.menu,name:tem.menu_definitions_locations
 #: view:tem.equipment:0
+#: field:tem.listing.bylocation,location_ids:0
 msgid "Locations"
 msgstr "Lagerorte"
 
@@ -730,11 +824,6 @@ msgstr "Volt"
 #: view:tem.equipment:0
 msgid "Inactive"
 msgstr "Inaktiv"
-
-#. module: tem
-#: view:tem.location:0
-msgid "References"
-msgstr "Referenzen"
 
 #. module: tem
 #: field:tem.equipment,purchase_date:0
@@ -765,6 +854,11 @@ msgstr "PMM - Einheiten"
 #: field:tem.equipment,measuring_precision_unit_id:0
 msgid "Precision unit"
 msgstr "Einheit Messgenauigkeit"
+
+#. module: tem
+#: field:res.users,is_tem_inspector:0
+msgid "Is TEM inspector"
+msgstr "Darf Prüfungen durchführen"
 
 #. module: tem
 #: view:tem.equipment:0
@@ -875,9 +969,10 @@ msgid "Working Hours"
 msgstr "Betriebsstunden"
 
 #. module: tem
-#: field:tem.equipment.group,measuring_resolution_unit_id:0
-msgid "Resolution unit"
-msgstr "Einheit Auflösung"
+#: field:tem.equipment.group,references_ids:0
+#: field:tem.inspection,references_ids:0
+msgid "Reference values"
+msgstr "Sollwerte"
 
 #. module: tem
 #: selection:tem.location,category:0
@@ -885,9 +980,9 @@ msgid "Customer"
 msgstr "Kunde"
 
 #. module: tem
-#: view:tem.location:0
-msgid "Basics"
-msgstr "Grundlagen"
+#: selection:tem.equipment.group,interval_repeat:0
+msgid "Months"
+msgstr "Monate"
 
 #. module: tem
 #: field:tem.res.responsibles,name:0
@@ -895,11 +990,16 @@ msgid "Name"
 msgstr "Name"
 
 #. module: tem
-#: field:tem.inspection,description:0
-msgid "Short Description"
-msgstr "Kurzbeschreibung"
+#: help:tem.inspection.references,apply_to:0
+msgid ""
+"Notes on when to apply this reference value, if some reference values do not "
+"apply to all items in the equipment group."
+msgstr ""
+"Hinweis, wann dieser Sollwert geprüft werden soll, wenn er nicht für alle "
+"Prüfmittel dieser Gruppe notwendig ist."
 
 #. module: tem
+#: view:tem.equipment:0
 #: view:tem.inspection:0
 #: view:tem.inspection.measurements:0
 msgid "TEM - Inspection Measurements"
@@ -922,6 +1022,11 @@ msgid "Item"
 msgstr "Gegenstand"
 
 #. module: tem
+#: model:ir.module.module,shortdesc:tem.module_meta_information
+msgid "Test Equiment Management"
+msgstr "Prüfmittelverwaltung"
+
+#. module: tem
 #: view:tem.res.responsibles:0
 msgid "TEM - Responsibles"
 msgstr "PMM - Verantwortliche"
@@ -932,12 +1037,27 @@ msgid "Hardness Brinell"
 msgstr "Härte Brinell"
 
 #. module: tem
-#: model:ir.model,name:tem.model_tem_inspection
-msgid "tem.inspection"
-msgstr "tem.inspection"
+#: field:tem.listing.bylocation,date_start:0
+#: field:tem.listing.bylocation.location,date_start:0
+msgid "Date start"
+msgstr "Startdatum"
+
+#. module: tem
+#: field:tem.inspection.references,name:0
+#: field:tem.inspection.references,reference_value:0
+msgid "Reference Value"
+msgstr "Sollwert"
+
+#. module: tem
+#: model:ir.actions.act_window,name:tem.open_tem_listing_bylocation_form
+#: model:ir.ui.menu,name:tem.menu_listing_bylocation_location
+#: view:tem.listing.bylocation:0
+msgid "Due Equipment, listing by Location"
+msgstr "Fällige Prüfmittel, nach Einsatzort (Drucken)"
 
 #. module: tem
 #: field:tem.inspection.measurements,measurement_unit_id:0
+#: field:tem.inspection.references,unit_id:0
 #: field:tem.res.units,name:0
 msgid "Unit"
 msgstr "Unit"
@@ -949,9 +1069,23 @@ msgid "TEM - Inspections"
 msgstr "PMM - Prüfungen"
 
 #. module: tem
+#: help:tem.equipment,active:0
+msgid ""
+"Active status is derived from the state: scrapped and lost are considered "
+"inactive."
+msgstr ""
+"Das Aktiv-Kennzeichen wird über den Status ermittelt: Verschrottet und "
+"Unauffindbar gelten als inaktiv."
+
+#. module: tem
 #: field:tem.equipment,purchase_price:0
 msgid "Purchase Price"
 msgstr "Kaufpreis"
+
+#. module: tem
+#: view:tem.equipment.group:0
+msgid "Extended search..."
+msgstr "Erweiterte Suche..."
 
 #. module: tem
 #: field:tem.equipment,inspection_due:0
@@ -967,3 +1101,33 @@ msgstr "Lieferchargen"
 #: field:tem.inspection,tool:0
 msgid "Tool"
 msgstr "Kalibriermittel"
+
+#~ msgid "tem.equipment"
+#~ msgstr "tem.equipment"
+
+#~ msgid "tem.equipment.group"
+#~ msgstr "tem.equipment.group"
+
+#~ msgid "tem.res.units"
+#~ msgstr "tem.res.units"
+
+#~ msgid "tem.res.responsibles"
+#~ msgstr "tem.res.responsibles"
+
+#~ msgid "tem.location"
+#~ msgstr "tem.location"
+
+#~ msgid "References"
+#~ msgstr "Referenzen"
+
+#~ msgid "Basics"
+#~ msgstr "Grundlagen"
+
+#~ msgid "tem.inspection"
+#~ msgstr "tem.inspection"
+
+#~ msgid "You need to set at least one measurement."
+#~ msgstr "Sie müssen mindestens ein Messergebnis eingeben."
+
+#~ msgid "tem.inspection.measurements"
+#~ msgstr "tem.inspection.measurements"
